Fix spacing & remove text decoration from footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,17 +127,19 @@ nav a:active {
 
 footer {
     background-color: #241e20;
-    text-decoration: none;
-    color: #c6e0c9;
 }
 
 #social-links {
     display: flex;
-    justify-content: center;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
 }
 
 #social-links a {
     text-decoration: none;
+    color: #c6e0c9;
 }
+
+
 
